# generative-ai

./: .env  PdfReader.py  agent.py  chat.py  chatPdf.py  gemni_rag.py  index.py  lang_memory.py  langchain_agent.py  langchain_message.py  llm_gemni.py  main.py  pdf_text_loader_splitter.py  pyproject.toml  rag.py
chat_history/: conservational_retriever_history.py  create_history_aware_retriever.py
data/: output.txt
data/faiss/: index.faiss  index.pkl
faiss_index/: index.faiss  index.pkl
frontend/: index.html  script.js  style.css
memory/: memory_example.py
rag/: main.py  vector.py
rag/components/: chain_loader.py  pdf_parser.py  retriever_loader.py  text_chunker.py  vector_store_manager.py
